--- a/views/serial_quotation_report.xml
+++ b/views/serial_quotation_report.xml
@@ -2,56 +2,104 @@
 <openerp>
     <data>
         <template id="serial_saleorder_quotation_report"
-            inherit_id="sale.report_saleorder_document">
-            <xpath expr="//table[@class='table table-condensed']/thead/tr"
-                position="replace">
-            <tr>
-    			<th>Description</th>
-    			<th>Numéro de série</th>
-                <th>Réference S</th>
-                <th>Réference L</th>
-    			<th>Tax</th>
-    			<th class="text-right">Quantity</th>
-    			<th class="text-right">Unit Price</th>
-    			<th groups="sale.group_discount_per_so_line">Disc.(%)</th>
-    			<th class="text-right">Price</th>
-		    </tr>
-            </xpath>
-            <xpath expr="//table[@class='table table-condensed']/tbody/tr"
-                position="replace">
-
-                <tr t-foreach="o.order_line" t-as="l">
-                    <td>
-                       <span t-field="l.name"/>
-                    </td>
-                    <td>
-                       <span t-field="l.product_id.num_serie"/>
-                    </td>
-                    <td>
-                       <span t-field="l.product_id.ean13"/>
-                    </td>
-                    <td>
-                       <span t-field="l.product_id.default_code"/>
-                    </td>
-                    <td>
-                        <span t-esc="', '.join(map(lambda x: x.name, l.tax_id))"/>
-                    </td>
-                    <td class="text-right">
-                        <span t-field="l.product_uom_qty"/>
-                        <span groups="product.group_uom" t-field="l.product_uom"/>
-                    </td>
-                    <td class="text-right">
-                        <span t-field="l.price_unit"/>
-                    </td>
-                    <td groups="sale.group_discount_per_so_line">
-                        <span t-field="l.discount"/>
-                    </td>
-                    <td class="text-right">
-                        <span t-field="l.price_subtotal"
-                            t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
-                    </td>
+		  inherit_id="sale.report_saleorder_document">
+	  <xpath expr="//table[@class='table table-condensed']//thead//tr//th[1]" position="after">
+	    <th>Reference L</th>
+	  </xpath>
+	  <xpath expr="//table[@class='table table-condensed']//thead//tr//th[2]" position="after">
+	    <th>Reference S</th>
+	  </xpath>
+	  <xpath expr="//tbody[@class='sale_tbody']/tr/td[1]" position="after">
+	    <td>
+	      <span t-field="l.product_id.default_code"/>
+	    </td>
+	  </xpath>
+	  <xpath expr="//tbody[@class='sale_tbody']/tr/td[2]" position="after">
+	    <td>
+	      <span t-field="l.product_id.ean13"/>
+	    </td>
+	  </xpath>
+          <xpath expr="//div[@class='oe_structure'][2]" position="after">
+	    <table class="table table-condensed" t-if="not o.picking_ids.pack_operation_ids">
+              <thead>
+                <tr>
+                  <th><strong>Product</strong></th>
+                  <th class="text-right"><strong>Quantity</strong></th>
+                  <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><th><strong>Source</strong></th></t>
+                  <th><strong>Barcode</strong></th>
+		  <th><strong>Numéro de Serie</strong></th>
+                  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><th><strong>Destination</strong></th></t>
                 </tr>
-            </xpath>
+              </thead>
+              <tbody>
+                <tr t-foreach="o.picking_ids.move_lines" t-as="move">
+                  <t t-if="(o.state != 'partially_available') or (move.reserved_availability > 0)">
+                    <td><span t-field="move.product_id"/></td>
+                    <td class="text-right">
+                      <t t-if="o.state == 'partially_available'">
+                        <span t-field="move.reserved_availability"/> <span t-field="move.product_id.uom_id" groups="product.group_uom"/>
+                      </t>
+                      <t t-if="o.state != 'partially_available'">
+                        <span t-field="move.product_uom_qty"/> <span t-field="move.product_uom" groups="product.group_uom"/>
+                      </t>
+                    </td>
+                    <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><td><span t-field="move.location_id"/></td></t>
+                    <td>
+                      <span t-if="move.product_id and move.product_id.ean13">
+                        <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', move.product_id.ean13, 600, 100)" style="width:300px;height:50px"/>
+                      </span>
+                    </td>
+		    <span t-field="move.lot_ids.name"/>
+                    <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><td><span t-field="move.location_dest_id"/></td></t>
+                  </t>
+                </tr>
+              </tbody>
+            </table>
+            <table class="table table-condensed" t-if="o.picking_ids.pack_operation_ids">
+              <thead>
+                <tr>
+                  <th><strong>Product</strong></th>
+                  <th class="text-right"><strong>Quantity</strong></th>
+                  <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><th><strong>Source</strong></th></t>
+                  <th><strong>Barcode</strong></th>
+		  <th><strong>Numéro de Serie</strong></th>
+		  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><th><strong>Destination</strong></th></t>
+                </tr>
+              </thead>
+              <tbody>
+                <tr t-foreach="o.picking_ids.pack_operation_ids" t-as="pack_operation">
+                  <td><span t-field="pack_operation.product_id"/>
+                  <t t-if="not pack_operation.product_id and pack_operation.package_id"><span  t-field="pack_operation.package_id"/></t></td>
+                  <td class="text-right"><span t-field="pack_operation.product_qty"/> <span t-field="pack_operation.product_uom_id" groups="product.group_uom"/></td>
+                  <t t-if="o.picking_ids.picking_type_id.code != 'incoming'"><td><span t-field="pack_operation.location_id"/>
+                  <span t-if="pack_operation.package_id">:</span>
+                  <span t-field="pack_operation.package_id"/>
+                  <span t-if="pack_operation.lot_id">:</span>
+                  <span t-field="pack_operation.lot_id"/>
+                </td>
+                  </t>
+                  <td>
+                    <span t-if="pack_operation.lot_id">
+                      <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', pack_operation.lot_id.name, 600, 100)" style="width:300px;height:50px"/>
+                    </span>
+                    <span t-if="pack_operation.product_id and not pack_operation.lot_id and pack_operation.product_id.ean13">
+                      <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', pack_operation.product_id.ean13, 600, 100)" style="width:300px;height:50px"/>
+                    </span>
+                    <span t-if="pack_operation.package_id and not pack_operation.product_id">
+                      <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', pack_operation.package_id.name, 600, 100)" style="width:300px;height:50px"/>
+                    </span>
+                  </td>
+		  <td>
+		    <span t-field="pack_operation.lot_id.name"/>
+		  </td>
+		  <t t-if="o.picking_ids.picking_type_id.code != 'outgoing'"><td><span t-field="pack_operation.location_dest_id"/>
+		  <span t-if="pack_operation.result_package_id">:</span>
+                  <span t-field="pack_operation.result_package_id"/>
+                  </td></t>
+                </tr>
+              </tbody>
+            </table>
+          </xpath>
         </template>
 
     </data>
