--- a/views/soulco_purchase_report.xml
+++ b/views/soulco_purchase_report.xml
@@ -3,23 +3,30 @@
 <openerp>
     <data>
         <template id="serial_purchase_order_report" inherit_id="purchase.report_purchaseorder_document">
-            <!-- image logo -->
-            <!-- <xpath expr="//div[@class='row'][1]" position="before">
-                <img t-att-src="'/serial_reporting/static/src/img/logo.png'" />
-            </xpath> -->
-
             <!-- thead -->
             <xpath expr="//table[@class='table table-condensed']/thead/tr" position="replace">
                 <tr>
                     <th>N°</th>
                     <th>Reference S</th>
                     <th>Reference L</th>
-                    <th><strong>Designation</strong></th>
-                    <th class="text-center"><strong>Date Req.</strong></th>
-                    <th class="text-right"><strong>Qty</strong></th>
-                    <th class="text-right"><strong>Unit Price</strong></th>
-                    <th class="text-right"><strong>Net Price</strong></th>
-                    <th><strong>Taxes</strong></th>
+                    <th>
+                        <strong>Designation</strong>
+                    </th>
+                    <th class="text-center">
+                        <strong>Date Req.</strong>
+                    </th>
+                    <th class="text-right">
+                        <strong>Qty</strong>
+                    </th>
+                    <th class="text-right">
+                        <strong>Unit Price</strong>
+                    </th>
+                    <th class="text-right">
+                        <strong>Net Price</strong>
+                    </th>
+                    <th>
+                        <strong>Taxes</strong>
+                    </th>
                 </tr>
             </xpath>
             <!-- tbody -->
@@ -51,8 +58,7 @@
                         <span t-field="line.price_unit"/>
                     </td>
                     <td class="text-right">
-                        <span t-field="line.price_subtotal"
-                            t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
+                        <span t-field="line.price_subtotal" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                     </td>
                     <td>
                         <span t-esc="', '.join(map(lambda x: x.name, line.taxes_id))"/>
@@ -63,16 +69,40 @@
             <!-- arrete -->
             <xpath expr="//div[@class='col-xs-4 pull-right']" position="after">
                 <div t-if="o.name" class="col-xs-8 pull-left">
-                    <strong>Arrêtée la présente facture à la somme de : </strong>
-                    <p t-raw="o.coversion(o.amount_total)"/>
+                    <strong>Arrêtée la présente facture à la somme de :
+                    </strong>
+                    <p t-field="o.amounTexte"/>
                 </div>
             </xpath>
 
-            <!-- remove shipping adress -->
-
-
-            <!-- Change the position of data partner -->
-
+            <!-- Add RC NIF & AI on customer info -->
+            <xpath expr="//div[@class='col-xs-5 col-xs-offset-1']/div" position="replace">
+                <h3 t-field="o.partner_id.name"></h3>
+                <div t-field="o.partner_id" t-field-options='{"widget": "contact", "fields": ["address", "phone", "fax"], "no_marker": true}'/>
+                <!-- <p t-if="o.partner_id.vat">VAT: <span t-field="o.partner_id.vat"/></p> -->
+                <!-- <div class='col-xs-12 col-xs-offset-1'>
+                    <span> RC N°: </span><p t-field="o.partner_id.rc"/>
+                    <span> NIF: </span><p t-field="o.partner_id.nif"/>
+                    <span> AI: </span><p t-field="o.partner_id.ai"/>
+                    <span> Ref client: </span><p t-field="o.partner_ref"/>
+                </div> -->
+            </xpath>
+            <xpath expr="//div[@class='col-xs-5 col-xs-offset-1']" position="after">
+                <div class='col-xs-5 col-xs-offset-'>
+                    <span>
+                        RC N°:
+                    </span><p t-field="o.partner_id.rc"/>
+                    <span>
+                        NIF:
+                    </span><p t-field="o.partner_id.nif"/>
+                    <span>
+                        AI:
+                    </span><p t-field="o.partner_id.ai"/>
+                    <span>
+                        Ref client:
+                    </span><p t-field="o.partner_ref"/>
+                </div>
+            </xpath>
         </template>
     </data>
 </openerp>
