--- a/views/account_invoice_custum_soulco.xml
+++ b/views/account_invoice_custum_soulco.xml
@@ -15,45 +15,46 @@
               <span t-if="o.type == 'in_refund'">Supplier Refund</span>
               <span t-if="o.type == 'in_invoice'">Supplier Invoice</span>
               <span t-field="o.number"/>
-            </h2>
+	      <p t-if="o.date_invoice">Invoice Date: <span t-field="o.date_invoice"/></p>
+	    </h2>
+
 
 	    <div class="row">
-	       <div class="col-xs-7 col-xs-offset-7">
-		<h2 t-field="o.partner_id.name"/>
-		<span t-if="o.partner_id.vat">TIN: <span t-field="o.partner_id.vat"/></span>
-              </div>
 	      <div class="col-xs-6 col-xs-offset-6">
+		<span t-if="o.partner_id.vat">TIN: <span t-field="o.partner_id.vat" style="text-align:left"/></span>
+	      </div>
+	      <div class="col-xs-6 col-xs-offset-6"  style="background-color:#000000;border: 1px solid #000000;color:#000000;">
+		<h2 t-field="o.partner_id.name" style="text-align:left"/>
 		<address t-field="o.partner_id"
 			 t-field-options='{"widget": "contact", "fields": ["address"], "no_marker": true}' />
 		<span t-if="o.partner_id.vat">TIN: <span t-field="o.partner_id.vat"/></span>
-              </div>
-	      <div class="col-xs-6 col-xs-offset-6">
-		<span>RC N°: </span>
-		<span t-field="o.partner_id.rc" style="text-align:left"/>
-              </div>
-	      <div class="col-xs-6 col-xs-offset-6">
-		<span>NIF  : </span>
-		<span t-field="o.partner_id.nif" style="text-align:left"/>
-              </div>
-	      <div class="col-xs-6 col-xs-offset-6">
-		<span>AI   : </span>
-		<span t-field="o.partner_id.ai" style="text-align:left"/>
-              </div>
-	      <div class="col-xs-6 col-xs-offset-6">
+		<p>RC N°: <span t-field="o.partner_id.rc" style="text-align:left"/></p>
+		<p>NIF  : <span t-field="o.partner_id.nif" style="text-align:left"/></p>
+		<p>AI   : <span t-field="o.partner_id.ai" style="text-align:left"/></p>
+	      </div>
+	      <!-- <div class="col-xs-6 col-xs-offset-6"  style="background-color:#000000;border: 1px solid #000000;color:#000000;"> -->
+	      <!-- 	<span>RC N°: </span> -->
+	      <!-- 	<span t-field="o.partner_id.rc" style="text-align:left"/> -->
+	      <!-- </div> -->
+	      <!-- <div class="col-xs-6 col-xs-offset-6"  style="background-color:#000000;border: 1px solid #000000;color:#000000;"> -->
+	      <!-- 	  <span>NIF  : </span> -->
+	      <!-- 	  <span t-field="o.partner_id.nif" style="text-align:left"/> -->
+	      <!-- </div> -->
+	      <!-- <div class="col-xs-6 col-xs-offset-6"  style="background-color:#000000;border: 1px solid #000000;color:#000000;"> -->
+	      <!-- 	<span>AI   : </span> -->
+	      <!-- 	<span t-field="o.partner_id.ai" style="text-align:left"/> -->
+	      <!-- </div> -->
+	      <div class="col-xs-6 col-xs-offset-6"  style="background-color:#000000;border: 1px solid #000000;color:#000000;">
 		<span>Ref Client   : </span>
 		<span t-field="o.partner_id.ref" style="text-align:left"/>
-              </div>
-
+	      </div>
 	    </div>
+
 
             <div class="row mt32 mb32">
               <div class="col-xs-2" t-if="o.name">
 		<strong>Description:</strong>
 		<p t-field="o.name"/>
-              </div>
-              <div class="col-xs-2" t-if="o.date_invoice">
-		<strong>Invoice Date:</strong>
-		<p t-field="o.date_invoice"/>
               </div>
               <div class="col-xs-2" t-if="o.origin">
 		<strong>Source:</strong>
@@ -73,8 +74,8 @@
               <thead>
 		<tr>
 		  <th>N°</th>
-		  <th>Reference L</th>
-      		  <th>Reference S</th>
+		  <th>Ref L</th>
+      		  <th>Ref S</th>
                   <th>Description</th>
                   <th>Quantity</th>
                   <th class="text-right">Unit Price</th>
@@ -185,7 +186,7 @@
             <!--   </div> -->
             <!-- </div> -->
 	    <strong>Arrêtée la présente facture à la somme de:</strong>
-            <span t-field="o.text_amount"/>
+            <p t-field="o.text_amount"/>
             <p t-if="o.comment">
               <strong>Comment:</strong>
               <span t-field="o.comment"/>
