--- a/views/account_invoice_custum_soulco.xml
+++ b/views/account_invoice_custum_soulco.xml
@@ -110,7 +110,7 @@
                     <span t-field="l.price_subtotal"
                           t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                   </td>
-		  <td class="text-right">
+		  <td class="text-right" t-if="l.invoice_line_tax_id">
                     <span t-esc="', '.join(map(lambda x: x.name, l.invoice_line_tax_id))"/>
                   </td>
 		  <t t-set="count" t-value="count+1"/>
