--- a/views/serial_reporting_picking_custum.xml
+++ b/views/serial_reporting_picking_custum.xml
@@ -185,9 +185,9 @@
           </table>
         </div>
       </xpath>
-      <xpath expr="//div[@class='page']" position="before">
-        <t t-call="serial_reporting.soulco_custom_header" />
-      </xpath>
+      <!-- <xpath expr="//div[@class='page']" position="after"> -->
+      <!--   <t t-call="serial_reporting.soulco_custom_header" /> -->
+      <!-- </xpath> -->
       <xpath expr="//div[@class='page']" position="after">
         <t t-call="serial_reporting.soulco_custom_footer" />
       </xpath>
