Add purchase order report
Update the conversion function
New file file fr purchase order report

--- a/views/serial_quotation_report.xml
+++ b/views/serial_quotation_report.xml
@@ -166,7 +166,7 @@
           </div>
 
           <strong>Arrêtée la présente facture à la somme de:</strong>
-          <p t-field="o.text_amount"/>
+          <p t-field="o.amounTexte"/>
           <p t-field="o.note"/>
           <p t-if="o.payment_term.note">
             <strong>Payment Term:</strong>
